[Update]mainのdisplayをblockに変更2

--- a/style.css
+++ b/style.css
@@ -81,13 +81,14 @@ footer {
 
   main {
     width: 100%;
+    margin: 50px auto; /*縦50px横autoの中央寄せ*/
+    display: block;
   }
 
   footer {
     width: 100%;
   }
 
-  main {
-    display: block;
-  }
+
+
 }
